# spring-toolkit-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/spring_toolkit_mcp/: __init__.py  analyzer.py  cli.py  quality.py  runtime.py  server.py
tests/: test_analyzer.py  test_cli.py  test_quality.py  test_runtime.py  test_server.py
