[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spring-toolkit-mcp"
version = "0.1.0"
description = "MCP server and CLI for agentic review of Spring Boot codebases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Spring Toolkit MCP contributors" }]
keywords = ["mcp", "spring-boot", "java", "code-review", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
spring-toolkit = "spring_toolkit_mcp.cli:main"
spring-toolkit-mcp = "spring_toolkit_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

